- Fixed cloud animation in negative direction. Solve scrollbar when animate over viewport - Add letter spacing because "Pridi" font is tight - Change background color sponsor on Footer - Change organizer font and border color - Add breakpoint 1650px and 1120px on Header - Style Tickets section complete - Add Form element style

--- a/wc-bangkok-2018/sass/_animate.scss
+++ b/wc-bangkok-2018/sass/_animate.scss
@@ -18,7 +18,7 @@
 		transform: translateX(0);
 	}
 	50% {
-		transform: translateX(40px);
+		transform: translateX(-40px);
 	}
 	100% {
  		transform: translateX(0);
