--- a/wc-bangkok-2018/sass/_fonts.scss
+++ b/wc-bangkok-2018/sass/_fonts.scss
@@ -5,11 +5,13 @@ body, * {
 	color: $text-color;
 	font-family: $font-pridi;
 	@include font-weight(regular);
+	letter-spacing: 1px;
 }
 
 h1, h2, h3, h4, h5, h6 {
 	font-family: $font-mitr;
 	@include font-weight(regular);
+	letter-spacing: 0;
 	margin-bottom: .5em;
 }
 
