--- a/wc-bangkok-2018/sass/_footer.scss
+++ b/wc-bangkok-2018/sass/_footer.scss
@@ -32,7 +32,7 @@
 }
 
 #custom_html-2 {
-	background-color: #ebebeb;
+	background-color: #f9f9f9;
 	margin-bottom: 0;
 	width: 100%;
 	.widget-title {
