--- a/wc-bangkok-2018/sass/_variables.scss
+++ b/wc-bangkok-2018/sass/_variables.scss
@@ -22,6 +22,7 @@ $font-weight: (
 $color-primary: 		#5e9af9;
 $color-primary-darker: 	#4581e3;
 $color-secondary: 		#ed3c59;
+$color-secondary-lighten: lighten(#ed3c59, 10%);
 $color-navy:	 		#1c1958;
 
 $body-color:			#fff;
